cluster/config/prometheus/prometheus-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: prometheus
    #---
#apiVersion: v1
  #kind: LimitRange
  #metadata:
  #name: cpu-limit-range
    #namespace: prometheus
    #spec:
  #limits:
    #- default:
    #cpu: 0.3
        #defaultRequest:
      #cpu: 0.2
        #type: Container
