cluster/config/prometheus/prometheus-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: prometheus
  annotations:
    kubernetes.io/ingress.class: "nginx"
    hajimari.io/enable: "true"
    hajimari.io/icon: chart-bar
    hajimari.io/appName: Prometheus
    hajimari.io/group: Monitoring
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization
    nginx.ingress.kubernetes.io/auth-signin: https://oauth.kube.home/oauth2/start?rd=https://$host$uri
    nginx.ingress.kubernetes.io/auth-url: https://oauth.kube.home/oauth2/auth
spec:
  tls:
  - hosts:
    - prometheus.kube.home
  rules:
  - host: prometheus.kube.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-kube-prometheus-prometheus
            port:
              number: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-alertmanager
  namespace: prometheus
  annotations:
    kubernetes.io/ingress.class: "nginx"
    hajimari.io/enable: "true"
    hajimari.io/icon: bell-ring
    hajimari.io/appName: AlertManager
    hajimari.io/group: Monitoring
    nginx.ingress.kubernetes.io/auth-response-headers: "Authorization"
    nginx.ingress.kubernetes.io/auth-signin: "https://oauth.kube.home/oauth2/start?rd=https://$host$uri"
    nginx.ingress.kubernetes.io/auth-url: "https://oauth.kube.home/oauth2/auth"
spec:
  tls:
  - hosts:
    - alertmanager.kube.home
  rules:
  - host: alertmanager.kube.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-kube-prometheus-alertmanager
            port:
              number: 9093
