cluster/config/prometheus/prometheus-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus
  namespace: prometheus
spec:
  hosts:
  - "prometheus.kube.home"
  gateways:
  - istio-system/main-gateway
  http:
  - route:
    - destination:
        host: kube-prometheus-stack-prometheus
        port:
          number: 9090
