cluster/config/prometheus/alertmanager-authpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: alertmanager-authentik-policy
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: gateway 
  action: CUSTOM
  provider:
    name: "authentik"
  rules:
  - to:
    - operation:
        hosts:
          - "alertmanager.kube.home"
